--- a/resume.html
+++ b/resume.html
@@ -9,13 +9,13 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 20px;
-      background-color: #f4f4f4;
+      background-color: #4fb2e8;
     }
     .resume {
-      background-color: #fff;
+      background-color: #3389b7;
       padding: 20px;
       border-radius: 5px;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 2px 5px rgba(46, 9, 9, 0.1);
     }
     h1, h2, h3 {
       margin-top: 0;
@@ -24,8 +24,8 @@
       margin-bottom: 20px;
     }
     .section h2 {
-      color: #333;
-      border-bottom: 2px solid #333;
+      color: #913131;
+      border-bottom: 2px solid #781010;
       padding-bottom: 5px;
     }
     .section ul {
