--- a/resume.html
+++ b/resume.html
@@ -1,66 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bhuvan HG - Resume</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 20px;
-      background-color: #4fb2e8;
-    }
-    .resume {
-      background-color: #3389b7;
-      padding: 20px;
-      border-radius: 5px;
-      box-shadow: 0 2px 5px rgba(46, 9, 9, 0.1);
-    }
-    h1, h2, h3 {
-      margin-top: 0;
-    }
-    .section {
-      margin-bottom: 20px;
-    }
-    .section h2 {
-      color: #913131;
-      border-bottom: 2px solid #781010;
-      padding-bottom: 5px;
-    }
-    .section ul {
-      list-style-type: none;
-      padding-left: 0;
-    }
-    .section ul li {
-      margin-bottom: 5px;
-    }
-  </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CV or Remuse Design</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" type="text/css" href="resume.css">
 </head>
 <body>
-
-  <div class="resume">
-    <h1>Bhuvan HG</h1>
-    <p>BCA Graduate | Dayananda Sagar University</p>
-    
-    <div class="section">
-      <h2>Skills</h2>
-      <ul>
-        <li>CSS</li>
-        <li>Java</li>
-        <li>C</li>
-        <li>Python</li>
-      </ul>
+    <div class="container">
+        <div class="left_Side">
+            <div class="profileText">
+                <div class="imgBx">
+                    <img src="">
+                </div>
+                <h2>BHUVAN H G<br><span>Student</span></h2>
+            </div>
+            <div class="contactInfo">
+            <h3 class="title">Contact Info</h3>
+            <ul>
+                <li>
+                    <span class="icon"><i class="fa fa-phone" aria-hidden="true"></i></span>
+                    <span class="text">9632825738</span>
+                </li>
+                <li>
+                    <span class="icon"><i class="fa fa-envelope" aria-hidden="true"></i></span>
+                    <span class="text">bhuvanachar2@gmail.com</span>
+                </li>
+                
+                <li>
+                    <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
+                    <span class="text">Banglore 560078</span>
+                </li>
+            </ul>
+        </div>
+        <div class="contactInfo education">
+            <h3 class="title">EDUCATION</h3>
+            <ul>
+                <li>
+                   <h5>2020</h5>
+                   <h4>St.Philomena</h4>
+                </li>
+                <li>
+                    <h5>2022</h5>
+                    <h4> Coputer Science</h4>
+                    <h4>Jyothi Kendriya Vidyalaya</h4>
+                 </li>
+                 <li>
+                    <h5>2024 - Now</h5>
+                    <h4>Bachelor in Computer Science</h4>
+                    <h4>dayananda sagar university</h4>
+                 </li>
+            </ul>
+        </div>
+        <div class="contactInfo language">
+            <h3 class="title">LANGUAGES</h3>
+            <ul>
+                <li>
+                    <span class="text">English</span>
+                    <span class="percent"></span>
+                    <div style="width: 90%;"></div>
+                </li>
+                <li>
+                    <span class="text">Hindi</span>
+                    <span class="percent"></span>
+                    <div style="width: 40%;"></div>
+                </li>
+                <li>
+                    <span class="text">kannada</span>
+                    <span class="percent"></span>
+                    <div style="width: 90%;"></div>
+                </li>
+            </ul>
     </div>
-
-    <div class="section">
-      <h2>Education</h2>
-      <ul>
-        <li>BCA - Dayananda Sagar University</li>
-        <li>Graduated: [2026]]</li>
-      </ul>
     </div>
+  <div class="right_Side">
+  <div class="about">
+    <h2 class="title2">Profile</h2>
+    <p></p>
   </div>
-
+  <div class="about">
+    <h2 class="title2">Projects</h2>
+    <div class="box">
+        <div class="year_company">
+<h5>sem 2</h5>
+        </div>
+        <div class="text">
+        <h4>Motorsport</h4>
+        <p>creating a web page of motorsport using html and css</p>
+    </div>
+</div>
+  <div class="box">
+    <div class="year_company">
+<h5>sem 4 - present</h5>
+    </div>
+    <div class="text">
+    <h4>stock price prediction</h4>
+    <p>creating a application for stock price prediction using machine learning and artificial inteligence </p>
+</div>
+</div>
+</div>
+<div class="about skills">
+    <h2 class="title2">Professional Skills</h2>
+<div class="box">
+    <h4>Html</h4>
+    <div class="percent">
+    <div style="width:95%;"></div>
+</div>
+</div>
+<div class="box">
+    <h4>CSS</h4>
+    <div class="percent">
+    <div style="width: 70%;"></div>
+</div>
+</div>
+<div class="box">
+    <h4>JAVASCRIPT</h4>
+    <div class="percent">
+    <div style="width: 60%;"></div>
+</div>
+</div>
+<div class="box">
+    <h4>PYTHON</h4>
+    <div class="percent">
+    <div style="width:75%;"></div>
+</div>
+</div>
+</div>
+<div class="About interest">
+    <h2 class="title2">Interest</h2>
+    <ul>
+        <li><i class="fa fa-bar-chart" aria-hidden="true"></i>Trading</li>
+        <li><i class="fa fa-laptop" aria-hidden="true"></i>Developing</li>
+        <li><i class="fa fa-gamepad" aria-hidden="true"></i>Gaming</li>
+        <li><i class="fa fa-briefcase" aria-hidden="true"></i>Business</li>
+    </ul>
+</div>
+  </div>
+    </div>
 </body>
 </html>
